--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@google/generative-ai": "^0.24.1",
     "@mui/material": "^7.1.0",
     "@mui/x-charts": "^8.2.0",
+    "@visx/group": "^3.12.0",
+    "@visx/hierarchy": "^3.12.0",
+    "chart.js": "^4.4.9",
     "firebase": "^11.6.1",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
