--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "chart.js": "^4.4.9",
     "firebase": "^11.6.1",
     "framer-motion": "^10.18.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
